# chormanager

./: .gitignore  AGENTS.md  KNOWN_ISSUES.md  PLAN.md  README.md  TODO.md  UX_AUDIT.md  import_singers.py  pyproject.toml  requirements.txt  run.sh  voice_groups.json
chormanager/: __init__.py  __main__.py  app_logging.py  config.py  import_singers.py
chormanager/backup/: AGENTS.md  service.py
chormanager/choraufstellung/: AGENTS.md  __init__.py  __main__.py  autosave.py  chormanager_bridge.py  chormanager_db.py  config.py  dependencies.py  file_io.py  main.py  main_menu.py  optimizer.py  optimizer_dialog.py  optimizer_rules.py  pdf_export.py  pdf_export_dialog.py  pdf_export_integration.py  qt_compat.py  recovery.py  singer_model.py  storage.py  theme.py  ui_components.py  undo_bridge.py
chormanager/core/: export_service.py  response_matrix.py  response_render_odt.py  (+1 more)
config/: app.yaml  fields.yaml  voice_groups.json  voice_groups.yaml
docs/: AGENTS.md  api-reference.md  benutzerhandbuch.md  benutzerhandbuch.oy  database-schema.md  technical-documentation.md
plans/: 2026-06-12_m1_main_window_refactor.md  2026-06-12_m2_choraufstellung_refactor.md  2026-06-13_m3_dialogs_refactor.md  2026-06-14_m4_anhang_b_subplans.md  2026-06-14_m4_findings.md  2026-06-14_m4_findings_phase2_p1.md  2026-06-14_m4_findings_phase3_p2.md  2026-06-14_subplan_db_connection_pool.md  2026-06-14_subplan_mixin_refactor.md  2026-06-14_subplan_optimizer_perf.md  2026-06-14_subplan_subshell_ipc.md  2026-06-14_subplan_update_controller.md  AGENTS.md
tests/: AGENTS.md  conftest.py
(+157 files in other folders)
